[package]
name = "aoike"
version = "0.1.0"
authors = ["AzurIce <973562770@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = [] }
# dioxus-logger = "0.7.0-rc.0"
walkdir = "2.5.0"
pulldown-cmark = "0.13.0"
tracing = "0.1.41"
aoike-macros = { path = "packages/aoike-macros" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[workspace]
members = ["packages/aoike-macros"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
