[package]
name = "aoike"
version = "0.1.0"
authors = ["AzurIce <973562770@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
to_token = ["quote", "proc-macro2"]

[workspace]
members = ["docs/blogs", "example"]

[workspace.dependencies]
aoike = { path = "." }

[dependencies]
time = { version = "0.3.43", features = ["wasm-bindgen"] }
dioxus = { version = "0.7.0-alpha.3", features = ["web", "router"] }
tracing = "0.1.41"
quote = { version = "1.0.40", optional = true }
proc-macro2 = { version = "1.0.101", optional = true }

[build-dependencies]
sass-rs = "0.2.2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
