[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoike"
version = "0.0.0"
authors = [
    {name = "AzurIce", email = "973562770@qq.com"}
]
description = "Static blog with Markdown"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
aoike = "aoike.__main__:cli"