[package]
name = "aoike-trunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "abce04fe341740c3c9245622208fb5a7ea792498" }
pathdiff = "0.2.1"
pulldown-cmark = "0.9.3"
serde = { version = "1.0.164", features = [ "derive" ] }