[package]
name = "aoike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.23", features = [ "cargo", "derive" ] }
lazy_static = "1.4.0"
minijinja = { version = "1.0.6", features = [ "loader" ]}
minijinja-autoreload = "1.0.6"
pathdiff = "0.2.1"
pulldown-cmark = "0.9.3"
serde = { version = "1.0.164", features = [ "derive" ] }
