[package]
name = "example-dioxus"
version = "0.1.0"
authors = ["AzurIce <973562770@qq.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoike-dioxus.workspace = true
example-dioxus-docsgen.path = "../dioxus-docsgen"
dioxus = { version = "0.7.0-rc.0", features = [] }
tracing = "0.1.41"

[build-dependencies]
aoike-dioxus = { workspace = true, features = ["build"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
